--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "ttgtcanvas",
-	"version": "0.2.2",
+	"version": "0.2.3",
 	"description": "A Custom Jupyter Widget Library",
 	"author": "Indresh Vishwakarma",
 	"main": "lib/index.js",
@@ -37,7 +37,8 @@
 	"dependencies": {
 		"@jupyter-widgets/base": "^1.1 || ^2 || ^3 || ^4",
 		"konva": "^7.2.5",
-		"lodash": "^4.17.4"
+		"lodash": "^4.17.4",
+		"p-queue": "^7.0.0"
 	},
 	"jupyterlab": {
 		"extension": "lib/labplugin",
